# v8-slim-monolith

./: .gitignore  README.md  V8_VERSION  config_site_hardening  embed-example.cpp
.github/workflows/: on_push.yml
targets/: shared.args.gn
targets/ios_arm64/: args.gn
targets/linux_arm64/: args.gn
targets/linux_x64/: args.gn
targets/macos_arm64/: args.gn
targets/macos_x64/: args.gn
targets/windows_x64/: args.gn
