# Platform-specific toolchain config
target_cpu="arm64"
target_os="ios"
ios_deployment_target=10
clang_use_chrome_plugins=false
is_clang=true

# Disabling custom libcxx is needed to avoid linker errors in embedding programs
use_custom_libcxx=false
use_custom_libcxx_for_host=false

# JIT and pointer compression are unsupported on iOS
# See https://v8.dev/docs/cross-compile-ios
v8_enable_pointer_compression=false
v8_jitless=true

# Build in release mode
# DCHECK is normally disabled by is_official_build, but since we're not building Chrome, we use dcheck_always_on instead
dcheck_always_on=false
is_debug=false
is_official_build=false
is_on_release_branch=true
v8_enable_debugging_features=false

# Build a single static lib
is_component_build=false
v8_monolithic=true
v8_static_library=true
v8_use_external_startup_data=false

# Configure future/extra features
v8_enable_future=false
v8_enable_javascript_promise_hooks=false

# Minimize binary size by disabling Intl, WebAssembly, the sandbox, and debugging stuff
archive_seed_corpus=false
exclude_unwind_tables=true
libcxx_natvis_include=false
register_fuzztests_in_test_suites=false
use_debug_fission=false
use_dummy_lastchange=true
v8_depend_on_icu_data_file=false
v8_enable_backtrace=false
v8_enable_builtins_optimization=true
v8_enable_disassembler=false
v8_enable_etw_stack_walking=false
v8_enable_fuzztest=false
v8_enable_gdbjit=false
v8_enable_i18n_support=false
v8_enable_maglev_graph_printer=false
v8_enable_memory_corruption_api=false
v8_enable_runtime_call_stats=false
v8_enable_sandbox=false
v8_enable_snapshot_compression=true
v8_enable_system_instrumentation=false
v8_enable_verify_heap=false
v8_enable_webassembly=false
v8_symbol_level=0
v8_wasm_random_fuzzers=false
