# Platform-specific toolchain config
target_cpu="arm64"
target_os="ios"
ios_deployment_target=10
clang_use_chrome_plugins=false
is_clang=true

# JIT and pointer compression are unsupported on iOS
# See https://v8.dev/docs/cross-compile-ios
v8_enable_pointer_compression=false
v8_jitless=true
# Lite Mode further reduces memory usage, and implies v8_jitless
v8_enable_lite_mode=true

# Disabling custom libcxx is needed to avoid linker errors in embedding programs
clang_use_chrome_plugins=false
use_custom_libcxx=false
use_custom_libcxx_for_host=false

# Build in release mode
# DCHECK is normally disabled by is_official_build, but since we're not building Chrome, we use dcheck_always_on instead
dcheck_always_on=false
is_debug=false
is_official_build=false
is_on_release_branch=true
v8_enable_debugging_features=false
strip_debug_info=true
symbol_level=0

# Build a single static lib
is_component_build=false
v8_monolithic=true
v8_use_external_startup_data=false

# Configure future/extra features
v8_enable_future=false
v8_enable_javascript_promise_hooks=false

# Minimize binary size by disabling Intl, WebAssembly, the sandbox, and debugging stuff
icu_use_data_file=false
v8_enable_fuzztest=false
v8_enable_gdbjit=false
v8_enable_i18n_support=false
v8_enable_maglev_graph_printer=false
v8_enable_sandbox=false
v8_enable_snapshot_compression=true
v8_enable_system_instrumentation=false
v8_enable_webassembly=false
