# Platform-specific toolchain config
target_cpu="arm64"
target_os="ios"
ios_deployment_target=10
is_clang=true

# JIT and pointer compression are unsupported on iOS
# See https://v8.dev/docs/cross-compile-ios
v8_enable_pointer_compression=false
v8_jitless=true
# Lite Mode further reduces memory usage, and implies v8_jitless
v8_enable_lite_mode=true
