# Platform-specific toolchain config
target_cpu="arm64"

# Disabling custom libcxx is needed to avoid linker errors in embedding programs
clang_use_chrome_plugins=false
use_custom_libcxx=false
use_custom_libcxx_for_host=false

# Build in release mode
# DCHECK is normally disabled by is_official_build, but since we're not building Chrome, we use dcheck_always_on instead
dcheck_always_on=false
is_debug=false
is_official_build=false
is_on_release_branch=true
v8_enable_debugging_features=false

# Build a single static lib
is_component_build=false
v8_monolithic=true
v8_use_external_startup_data=false

# Configure future/extra features
v8_enable_future=false
v8_enable_javascript_promise_hooks=false

# Significantly reduce memory usage in exchange for a 4GB cap on instance heaps (and negligible performance boost)
# Requires embedding code to define V8_COMPRESS_POINTERS
v8_enable_pointer_compression=true

# Minimize binary size by disabling Intl, WebAssembly, the sandbox, and debugging stuff
icu_use_data_file=false
v8_enable_fuzztest=false
v8_enable_gdbjit=false
v8_enable_i18n_support=false
v8_enable_maglev_graph_printer=false
v8_enable_sandbox=false
v8_enable_snapshot_compression=true
v8_enable_system_instrumentation=false
v8_enable_webassembly=false
